# HackComputer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: autobuild.yml
CMake/: Configure.cmake  CopyTarget.cmake  Jack2Svg.cmake
Current/: CMakeLists.txt  Doxyfile  Doxyfile.txt.in  MdDox.cfg  build.py  clean.py
Current/images/dot/: internal-diagram-11.dot  internal-diagram-12.dot  internal-diagram-13.dot  internal-diagram-14.dot  internal-diagram-15.dot  internal-diagram-16.dot  internal-diagram-17.dot  internal-diagram-18.dot  internal-diagram-19.dot  internal-diagram-2.dot  internal-diagram-20.dot  internal-diagram-21.dot  internal-diagram-22.dot  internal-diagram-23.dot  internal-diagram-24.dot  internal-diagram-25.dot  (+29 more)
Current/markdown/: a00749.md  a00750.md  a00751.md  a00752.md  a00753.md  a00754.md  a00755.md  a00756.md  a00757.md  a00758.md  a00759.md  a00760.md  a00761.md  a00762.md  a00763.md  a00764.md  a00765.md  a00770.md  a00774.md  a00778.md  a00782.md  a00786.md  a00790.md  a00794.md  a00798.md  a00802.md  a00806.md  a00810.md  a00814.md  a00818.md  a00822.md  a00826.md  a00830.md  a00834.md  a00838.md  a00842.md  a00846.md  a00850.md  a00854.md  a00858.md  (+783 more)
Current/pages/: CMake.h  Dir01.Utils.h  HackComputer.h  Hc00.MainPage.h  Hc01.Utils.h  Hc02.Chips.h  Hc02Chips01.h  Hc03.Assembler.h  Hc04.VirtualMachine.h  Hc05.Compiler.h  Hc06.Bindings.h  Hc06.Computer.h  Hc07.Bindings.h  Hc07.Computer.h  Hc08.Extra.h
Current/xml/: ALU_8cpp.xml  ALU_8h.xml  Add16_8cpp.xml  Add16_8h.xml  And16_8cpp.xml  And16_8h.xml  And_8cpp.xml  And_8h.xml  Application_8cpp.xml  Application_8h.xml  Assembler_2Main_8cpp.xml  Assembler_2Parser_8cpp.xml  Assembler_2Parser_8h.xml  Assembler_2Scanner_8cpp.xml  Assembler_2Scanner_8h.xml  Assembler_2Token_8h.xml  AssemblyDebuggerPrivate_8cpp.xml  AssemblyDebuggerPrivate_8h.xml  AssemblyDebugger_8cpp.xml  AssemblyDebugger_8h.xml  Bindings_8cpp.xml  BitUtils_8h.xml  Bit_8cpp.xml  Bit_8h.xml  CMake_8h.xml  CPU_8cpp.xml  CPU_8h.xml  Char_8cpp.xml  Char_8h.xml  Chip_8h.xml  Chips_2Memory_8cpp.xml  Chips_2Memory_8h.xml  Clock_8cpp.xml  Clock_8h.xml  ColorCache_8cpp.xml  ColorCache_8h.xml  CommandRuntime_8cpp.xml  CommandRuntime_8h.xml  Common_8h.xml  Compiler_2Analyzer_2Main_8cpp.xml  (+1319 more)
Source/: CMakeLists.txt
Source/Assembler/: ASM.grm  CMakeLists.txt  Instruction.cpp  Instruction.h  Main.cpp  ParseError.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  SyntaxError.h  Token.h
Source/Bindings/: Bindings.cpp  CMakeLists.txt
Source/Chips/: ALU.cpp  ALU.h  Add16.cpp  Add16.h  And.cpp  And.h  And16.cpp  And16.h  Bit.cpp  Bit.h  BitUtils.h  CMakeLists.txt  CPU.cpp  CPU.h  Chip.h  Clock.cpp  Clock.h  Computer.cpp  Computer.h  DFlipFlop.cpp  DFlipFlop.h  DMux.cpp  DMux.h  DMux4Way.cpp  DMux4Way.h  DMux8Way.cpp  DMux8Way.h  DefaultMemorySegment.h  FullAdder.cpp  FullAdder.h  HalfAdder.cpp  HalfAdder.h  IMemorySegment.h  Inc16.cpp  Inc16.h  Memory.cpp  Memory.h  Mux.cpp  Mux.h  Mux16.cpp  (+42 more)
Source/Compiler/: CMakeLists.txt  Emitter.cpp  Parser.cpp  Parser.h  Scanner.cpp
Source/Computer/: Application.cpp  Application.h  CMakeLists.txt  CommandRuntime.cpp  CommandRuntime.h  DebugRuntime.cpp  DebugRuntime.h  IRuntime.h  Main.cpp  Runtime.cpp  Runtime.h  RuntimeInterface.h  RuntimeSDL.cpp  RuntimeSDL.h  RuntimeScreen.cpp  RuntimeScreen.h  ScreenSDL.cpp  ScreenSDL.h
Source/Language/: CMakeLists.txt  Constants.h  Emitter.h  Jack.grm  Main.cpp  Scanner.h  Token.h
Source/OperatingSystem/: CMakeLists.txt  Memory.h  Memory.jack
Source/Utils/: CMakeLists.txt  Char.cpp  Char.h  Common.h  Console.cpp  Console.h  FileSystem.cpp  FileSystem.h  IndexCache.h  MemoryStream.cpp  MemoryStream.h  String.cpp  String.h  Traits.h
Source/Utils/CommandLine/: Option.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.h
Source/Utils/Exceptions/: Exception.h  IndexException.h  NotImplementedException.h
Source/Utils/ParserBase/: ParseError.cpp  ParseError.h  ParserBase.cpp  ParserBase.h  ScannerBase.cpp  ScannerBase.h  TokenBase.h
Source/Utils/UserInterface/: ColorCache.cpp  ColorCache.h  Common.h  Context.cpp  Context.h  Math.cpp  Math.h  Platform.cpp  Platform.h  PlatformWin32.cpp  PlatformWin32.h
Source/VirtualMachine/: CMakeLists.txt  CodeWriter.cpp  CodeWriter.h  Constants.h  Emitter.cpp  Emitter.h  Main.cpp  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Stub.cpp  Token.h  VM.grm
Test/: CMakeLists.txt  FileCmp.cpp  General.cpp  Test1.cpp  Test2.cpp  Test2Data.inl  Test3.cpp  Test4.cpp  Test5.cpp
Test/Jack/: Test01.jack  Test01.xml  Test02.dot  Test02.xml  Test03.dot  Test03.xml  Test04.dot  Test04.xml  Test05.dot  Test05.xml  Test06.dot  Test06.xml  Test07.dot  Test07.xml  Test08.dot  Test08.jack  Test08.xml  Test09.dot  Test09.jack  Test09.xml  Test10.dot  Test10.jack  Test10.vm  Test10.xml  Test11.jack  Test11.xml  Test13.jack  Test14.jack  out.dot
Test/Rom/: Add.asm
Test/VM/: Test01.asm  Test01.cmp  Test01.vm  Test02.asm  Test02.vm  Test03.asm  Test03.vm  Test04.asm  Test04.vm  Test05.asm  Test05.vm  Test06.asm  Test06.vm  Test07.asm  Test07.vm  Test08.asm  Test08.vm  Test09.asm  Test09.vm  Test10.asm  Test11.asm  Test11.vm  Test12.asm  Test13.asm  Test13.vm  Test14.asm  Test14.vm  Test15.asm  Test15.vm  Test16.asm  Test16.vm  Test17.asm  Test18.asm  Test18.vm  Test19.vm  Test20.vm
Tools/: CMakeLists.txt
Tools/DocConverter/: CMakeLists.txt  Common.h  Document.cpp  Document.h  Main.cpp  XmlAttribute.h  XmlDocument.cpp  XmlDocument.h  XmlNode.cpp  XmlNode.h  compound.xsd.h
Tools/PyDoc/: pydoxy.py
Web/: README.md  pubspec.yaml
Web/assets/: bindings.js  bindings.wasm
Web/lib/: computer.dart  icon.dart  main.dart  metrics.dart  palette.dart  strings.dart
Web/linux/: CMakeLists.txt  my_application.cc
Web/test/: computer.dart
Web/web/: index.html
Web/windows/: CMakeLists.txt
dev/: build.py
docs/: .last_build_id  flutter_service_worker.js  index.html  main.dart.js  main.dart.js.map  manifest.json  version.json
docs/assets/: AssetManifest.json  FontManifest.json  NOTICES
(+103 files in other folders)
